tests/negative/type_break_outside_loop.uzpp
// XATOLIK_KUTILMOQDA: type: sikl tashqarisida sikldan
ulash "uzpp_runtime.hpp"
butun asosiy() {
    sikldan;
    qaytarish 0;
}
